# ARC

./: .gitignore  _continue_train.py  _debug_bd_check.py  _debug_canvas.py  _debug_canvas2.py  _debug_mismatch.py  _debug_shape.py  _eval_full.py  _eval_multiview.py  _eval_rearc.py  _eval_ttt.py  _final_eval.py  _test_augment.py  _test_augment2.py  _test_forward.py  _train_full.py  _train_rearc.py  _train_rearc_ft.py  paper.tex  project_log.md  pyproject.toml  requirements.txt  setup_server.sh
experiments/: run_all.py
notebooks/: 01_data_exploration.ipynb
results/: EXP3_VARC_BASE.md
results/logs/: exp0_dry_run_test_1784558780.json  exp1_deepseek_text_only_1784559351.json  exp1_deepseek_text_only_1784559715.json  exp1_deepseek_text_only_1784560065.json  exp1_deepseek_text_only_1784562152.json  exp1_deepseek_text_only_1784562458.json  exp1_deepseek_text_only_1784564004.json  exp1_deepseek_text_only_1784601393.json  exp1_deepseek_text_only_1784601898.json  exp1_deepseek_text_only_1784602526.json  exp1_deepseek_text_only_1784603140.json  exp1_deepseek_text_only_merged_original.json  exp1_deepseek_text_only_merged_shuffle_60.json  exp3_varc_base_results.json  exp3_varc_full_eval.json  exp3_varc_full_train.json  exp3_varc_with_ttt_1784679870.json
scripts/: download_arc.py  run_varc.ps1
src/: __init__.py  config.py  data_loader.py  visualizer.py
src/arc_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/deepseek/: __init__.py  client.py  output_parser.py  prompt_builder.py
src/varc/: __init__.py  augment.py  (+4 more)
tests/: test_data_loader.py
